--- a/Final_Report/cs682_final_report.tex
+++ b/Final_Report/cs682_final_report.tex
@@ -140,8 +140,21 @@ The final ensemble achieved an accuracy of 71.01\% on the 10,000 test images.  E
 
 When passed through the ensemble, 2,045 of the 10,000 test images went unlabeled. Since these cases are treated as an incorrect prediction, this reduced the overall accuracy of the ensemble by 20.45\%.  This means that excluding unlabeled images, the ensemble correctly label an image with an accuracy of 89.26\%. This signifies unlabeled images as the main cause for significantly lower overall accuracy. Of the 2045 unlabeled images, 327(15.99\%) of them were images of cats. The average number of unlabeled images of the other nine classes is 191(9.34\%), rounding up to the next integer. This shows that not being able to push the cat classifier as far as the other classifiers significantly reduced overall accuracy.
 
-The false positive image set shows images of birds frequently being mislabeled as airplanes and vice versa. This relationship between two classes can also be seen between automobiles and trucks. It makes logical sense for birds and airplanes to be confused for one another, and automobiles and trucks to be confused, due to the pairs sharing similar colors, shapes, backgrounds, and many more features. There is an image of a frog in the false negative set that was incorrectly labeled a bird when looking at the false positive set. This frog has a similar position and background to many images of birds.This is also true for an image of a horse in the false negative set that was considered a false positive by the classifier for the truck class. Both these images, while they did not go unlabeled, still contributed to a loss in accuracy as they were considered both false negatives by their own classifier and false positives by another.
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=6cm,height=4cm]{SomeFalsePositives.png}
+	\end{center}
+	\caption{Subset of False Positive Images}
+\end{figure}
 
+The false positive image set shows images of birds frequently being mislabeled as airplanes and vice versa. This relationship between two classes can also be seen between automobiles and trucks. It makes logical sense for birds and airplanes to be confused for one another, and automobiles and trucks to be confused, due to the pairs sharing similar colors, shapes, backgrounds, and many more features. The green and yellow image of a frog in Figure  4 was incorrectly labeled a bird when looking at the false positive set. This frog has a similar position and background to many images of birds. This is also true for the image of a horse in the center of Figure 5 that was considered a false positive by the classifier for the truck class. Both these images, while they did not go unlabeled, still contributed to a loss in accuracy as they were considered both false negatives by their own classifier and false positives by another.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=6cm,height=4cm]{SomeFalseNegatives.png}
+	\end{center}
+	\caption{Subset of False Negative Images}
+\end{figure}
 
 \section{Conclusion}
 We were able to successfully produce an ensemble of ten (one per class) one-vs-all classifiers, each with over 95\% accuracy on the test data, except for one that achieved about 93\%. However, when the results are combined to act as a standard classifier the accuracy drops to approximately 71\% due in large part to 20\% of the images receiving no label. When compared to pre-existing models that have been applied to the Cifar-10 dataset such as the model created by Lee, Gallagher, and Tu that achieved an accuracy of 92.83\% and the model created by Benjamin Graham which achieved 96.53\%, our results are significantly worse.  When compared to the standard CNN that we built, which was able to achieve an accuracy of 81\% on the Cifar-10 dataset, our results look even less promising. The standard CNN was developed faster than each one-vs-all classifier, making the ensemble appear to be an inferior option in comparison. The image sets are useful sanity checks, as they show that images are only being misclassified in cases where it makes visual sense for the images to be mixed up. The high number of false negatives is the cause behind the large number of unlabeled images which in turn is the cause of the much lower accuracy of the ensemble. Every percent gained by pushing the accuracies of the individual one-vs-all classifiers closer to 100\% decreases the number of unlabeled images by a notable amount, which in turn increases the accuracy of the network by a large margin. The set of classifiers performs well (89\%) at labeling an image, given that the image is recognized by any of the classifiers. However, as we experienced, it is inefficient to spend an inordinate amount of time and effort pushing one classifier in the entire ensemble to achieve 1\% better performance while a fraction of that time and effort can be spent achieving 10\% higher accuracy on the test data by using a standard classifier.
